ignore changes .zsh submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,33 +1,34 @@
 # Core
 [submodule ".vim/bundle/pathogen"]
-        path = .vim/bundle/vim-pathogen
-        url = https://github.com/tpope/vim-pathogen.git
+    path = .vim/bundle/vim-pathogen
+    url = https://github.com/tpope/vim-pathogen.git
 
 [submodule ".vim/bundle/ctrlp.vim"]
-        path = .vim/bundle/ctrlp.vim
-        url = https://github.com/kien/ctrlp.vim.git
+    path = .vim/bundle/ctrlp.vim
+    url = https://github.com/kien/ctrlp.vim.git
 
 [submodule ".vim/bundle/ack.vim"]
-        path = .vim/bundle/ack.vim
-        url = https://github.com/mileszs/ack.vim.git
+    path = .vim/bundle/ack.vim
+    url = https://github.com/mileszs/ack.vim.git
 
 [submodule ".vim/bundle/nerdcommenter"]
-        path = .vim/bundle/nerdcommenter
-        url = https://github.com/scrooloose/nerdcommenter.git
+    path = .vim/bundle/nerdcommenter
+    url = https://github.com/scrooloose/nerdcommenter.git
 
 [submodule ".vim/bundle/nerdtree"]
-        path = .vim/bundle/nerdtree
-        url = https://github.com/scrooloose/nerdtree.git
+    path = .vim/bundle/nerdtree
+    url = https://github.com/scrooloose/nerdtree.git
 
 [submodule ".vim/bundle/supertab"]
-        path = .vim/bundle/supertab
-        url = https://github.com/ervandew/supertab.git
+    path = .vim/bundle/supertab
+    url = https://github.com/ervandew/supertab.git
 
 [submodule ".vim/bundle/vimerl"]
-        path = .vim/bundle/vimerl
-        url = https://github.com/jimenezrick/vimerl.git
+    path = .vim/bundle/vimerl
+    url = https://github.com/jimenezrick/vimerl.git
 
 
 [submodule ".zsh"]
-	path = .zsh
-	url = https://github.com/robbyrussell/oh-my-zsh.git
+    path = .zsh
+    url = https://github.com/robbyrussell/oh-my-zsh.git
+    ignore = all
